--- a/ICIN-frontend/src/app/app.component.html
+++ b/ICIN-frontend/src/app/app.component.html
@@ -31,7 +31,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+        <!----  <li class="nav-item active">
             <a class="nav-link" href="#">Home
               <span class="sr-only">(current)</span>
             </a>
@@ -40,32 +40,13 @@
             <a class="nav-link" href="#">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">Sign Up</a>
-          </li>
+            <a class="nav-link" routerLink="/register">Sign Up</a>
+          </li> -->
                 </ul>
       </div>
     </div>
   </nav>
-
-  <!-- Page Content -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h1 class="mt-5">ICIN Banking Application</h1>
-        <p class="lead">ICIN is one of the top banking firms that accepts deposits from the public for the purpose of lending loans to the public.</p>
-        <p class="lead">Internet Banking is a convenient way to do banking from the comfort of your home or office. Avoid the queue or delays and try our simple and secure Internet Banking facility for an unmatched online banking experience.
-
-          Just login today using your User ID and Password to experience ICIN Bank Internet Banking.
-          
-           </p >
-      </div>
-    </div>
-  </div>
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.slim.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<router-outlet></router-outlet>
+<app-homepage></app-homepage>
 </body>
 
 </html>
