Fixed Registration form display issue

--- a/ICIN-frontend/src/app/homepage/homepage.component.html
+++ b/ICIN-frontend/src/app/homepage/homepage.component.html
@@ -19,7 +19,7 @@
             Not having an account ? Click the below register button
              </p >
     </div>
-    <button type="button" class="btn btn-primary btn-lg">REGISTER</button>
+    <button type="button" class="btn btn-primary btn-lg" (click)="redirectToRegister()">REGISTER</button>
   </div>
   <!--<button class="btn btn-info btn-block my-4" type="submit">Sign in</button>-->
   <!-- Bootstrap core JavaScript -->
