--- a/ICIN-frontend/src/app/registration/subComponents/kyc-details/kyc-details.component.html
+++ b/ICIN-frontend/src/app/registration/subComponents/kyc-details/kyc-details.component.html
@@ -1,3 +1,9 @@
+<div class="signup-form">
+    <form >
+		<h2>Sign Up</h2>
+		<p>Please fill in this form to create an account!</p>
+        <hr>
+        <router-outlet>
 <div class="form-group">
     <div class="input-group">
         <div class="input-group-prepend">
@@ -26,4 +32,8 @@
 <div class="form-group">
     <label class="form-check-label"></label>
 </div>
+
+</router-outlet>
+</form>
+<div class="text-center ">Already have an account? <a href="#" class="text-white" routerLink="/login">Login here</a></div>
 
