--- a/ICIN-frontend/src/app/registration/subComponents/address-details/address-details.component.html
+++ b/ICIN-frontend/src/app/registration/subComponents/address-details/address-details.component.html
@@ -1,62 +1,75 @@
-<div class="form-group">
-    <div class="input-group">
-        <div class="input-group-prepend">
-            <span class="input-group-text">
-                <i class="fa fa-building"></i>
-            </span>                    
-        </div>
-        <input type="text" class="form-control" name="addressLine1" id="addressLine1" placeholder="House Number - Building Name" required="required">
-    </div>
-</div>
-<div class="form-group">
-    <div class="input-group">
-        <div class="input-group-prepend">
-            <span class="input-group-text">
-                <i class="fa fa-road" aria-hidden="true"></i>
-            </span>                    
-        </div>
-        <input type="text" class="form-control" name="addressLine2" id="addressLine2" placeholder="Street Name or Locality" required="required">
-    </div>
-</div>
-<div class="form-group">
-    <div class="input-group">
-        <div class="input-group-prepend">
-            <span class="input-group-text">
-                <i class="fa fa-location-arrow"></i>
-            </span>                    
-        </div>
-        <input type="text" class="form-control" name="addressLine3" id="addressLine3" placeholder="Town or Village Name" required="required">
-    </div>
-</div>
-<div class="form-group">
-    <div class="input-group">
-        <div class="input-group-prepend">
-            <span class="input-group-text">
-                <i class="fa fa-globe"></i>
-            </span>                    
-        </div>
-        <input type="text" class="form-control" name="addressLine4" id="addressLine4" placeholder="City and State Name" required="required">
-    </div>
-</div>
-<div class="form-group">
-    <div class="input-group">
-        <div class="input-group-prepend">
-            <span class="input-group-text">
-               
-                <i class="fa fa-map-marker"></i>
-            </span>                    
-        </div>
-        <input type="number" class="form-control" name="addressLine5" id="addressLine5" placeholder=Pincode required="required">
-    </div>
+<div class="signup-form">
+    <form >
+		<h2>Sign Up</h2>
+		<p>Please fill in this form to create an account!</p>
+        <hr>
+        <router-outlet>
 
-</div>
 
-  
-<div class="form-group">
-    <button type="button" class="btn btn-primary btn-md m-4 float-right d-block" id="next" (click)="validateAddress()">Next</button>
-</div>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fa fa-building"></i>
+                        </span>                    
+                    </div>
+                    <input type="text" class="form-control" name="addressLine1" id="addressLine1" placeholder="House Number - Building Name" required="required">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fa fa-road" aria-hidden="true"></i>
+                        </span>                    
+                    </div>
+                    <input type="text" class="form-control" name="addressLine2" id="addressLine2" placeholder="Street Name or Locality" required="required">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fa fa-location-arrow"></i>
+                        </span>                    
+                    </div>
+                    <input type="text" class="form-control" name="addressLine3" id="addressLine3" placeholder="Town or Village Name" required="required">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fa fa-globe"></i>
+                        </span>                    
+                    </div>
+                    <input type="text" class="form-control" name="addressLine4" id="addressLine4" placeholder="City and State Name" required="required">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                        
+                            <i class="fa fa-map-marker"></i>
+                        </span>                    
+                    </div>
+                    <input type="number" class="form-control" name="addressLine5" id="addressLine5" placeholder=Pincode required="required">
+                </div>
 
-<div class="form-group">
-    <label class="form-check-label"></label>
-</div>
+            </div>
+
+            
+            <div class="form-group">
+                <button type="button" class="btn btn-primary btn-md m-4 float-right d-block" id="next" (click)="validateAddress()">Next</button>
+            </div>
+
+            <div class="form-group">
+                <label class="form-check-label"></label>
+            </div>
+            </router-outlet>
+            </form>
+            <div class="text-center ">Already have an account? <a href="#" class="text-white" routerLink="/login">Login here</a></div>
+
+
 
