--- a/ICIN-frontend/src/app/registration/subComponents/user-registration/user-registration.component.html
+++ b/ICIN-frontend/src/app/registration/subComponents/user-registration/user-registration.component.html
@@ -1,3 +1,9 @@
+<div class="signup-form">
+    <form >
+		<h2>Sign Up</h2>
+		<p>Please fill in this form to create an account!</p>
+        <hr>
+        <router-outlet>
 <div class="form-group">
     <div class="input-group">
         <div class="input-group-prepend">
@@ -38,3 +44,6 @@
     <button type="submit" class="btn btn-primary btn-md">Sign Up</button>
 </div>
 
+</router-outlet>
+</form>
+<div class="text-center ">Already have an account? <a href="#" class="text-white" routerLink="/login">Login here</a></div>
