--- a/ICIN-frontend/src/app/homepage/homepage.component.html
+++ b/ICIN-frontend/src/app/homepage/homepage.component.html
@@ -7,19 +7,12 @@
         <p class="lead">Internet Banking is a convenient way to do banking from the comfort of your home or office. Avoid the queue or delays and try our simple and secure Internet Banking facility for an unmatched online banking experience.
 
           Just login today using your User ID and Password to experience ICIN Bank Internet Banking.
-          
            </p >
+           <p class="lead">Dont have an account? Click the Sign Up button in the Nav bar to create your account
+             </p >
+          
       </div>
     </div>
-  </div>
-  <div class="text-center">
-    <button type="button" class="btn btn-primary btn-lg">LOGIN</button><br><br>
-    <div class="container">
-        <p class="lead">
-            Not having an account ? Click the below register button
-             </p >
-    </div>
-    <button type="button" class="btn btn-primary btn-lg" (click)="redirectToRegister()">REGISTER</button>
   </div>
   <!--<button class="btn btn-info btn-block my-4" type="submit">Sign in</button>-->
   <!-- Bootstrap core JavaScript -->
