Added validation for registration form

--- a/ICIN-frontend/src/app/registration/subComponents/kyc-details/kyc-details.component.html
+++ b/ICIN-frontend/src/app/registration/subComponents/kyc-details/kyc-details.component.html
@@ -1,5 +1,5 @@
 <div class="signup-form">
-    <form >
+    <form [formGroup]="kycForm">
 		<h2>Sign Up</h2>
 		<p>Please fill in this form to create an account!</p>
         <hr>
@@ -11,7 +11,10 @@
                 <i class="fa fa-calendar"></i>
             </span>                    
         </div>
-        <input type="text" class="form-control" name="dob" placeholder="Date of birth" onfocus="(this.type='date')" onblur="(this.type='text')" required="required">
+        <input type="text" class="form-control" name="dob" placeholder="Date of birth" onfocus="(this.type='date')" onblur="(this.type='text')" required="required" formControlName="dob" [ngClass]="{ 'is-invalid':  f.dob.errors }" >
+        <div *ngIf="f.dob.errors" class="invalid-feedback">
+            <div *ngIf="f.dob.errors.required">    <p class="alert alert-warning mt-2" >Date of birth is required</p>  </div>
+        </div>
     </div>
 </div>
 <div class="form-group">
@@ -21,7 +24,10 @@
                 <i class="fa fa-id-card-o"></i>
             </span>                    
         </div>
-        <input type="text" class="form-control" name="pancard" placeholder="Pancard Number" required="required">
+        <input type="text" class="form-control" name="pancard" placeholder="Pancard Number" required="required" formControlName="pan" [ngClass]="{ 'is-invalid':  f.pan.errors }" >
+        <div *ngIf="f.pan.errors" class="invalid-feedback">
+            <div *ngIf="f.pan.errors.required">    <p class="alert alert-warning mt-2" >Pan card Number is required</p>  </div>
+        </div>
     </div>
 </div>
   
