--- a/ICIN-frontend/src/app/registration/subComponents/address-details/address-details.component.html
+++ b/ICIN-frontend/src/app/registration/subComponents/address-details/address-details.component.html
@@ -13,8 +13,10 @@
                             <i class="fa fa-building"></i>
                         </span>                    
                     </div>
-                    <input type="text" class="form-control" name="addressLine1" id="addressLine1" placeholder="House Number - Building Name" required="required">
+                    <input type="text" class="form-control" name="addressLine1" id="addressLine1" placeholder="House Number - Building Name" required="required" [(ngModel)]="addressLine1">
                 </div>
+                <p class="alert alert-warning mt-2" *ngIf="invalidAddressLine1">House Number and building name is required</p>
+
             </div>
             <div class="form-group">
                 <div class="input-group">
@@ -23,8 +25,9 @@
                             <i class="fa fa-road" aria-hidden="true"></i>
                         </span>                    
                     </div>
-                    <input type="text" class="form-control" name="addressLine2" id="addressLine2" placeholder="Street Name or Locality" required="required">
+                    <input type="text" class="form-control" name="addressLine2" id="addressLine2" placeholder="Street Name or Locality" required="required" [(ngModel)]="addressLine2">
                 </div>
+                <p class="alert alert-warning mt-2" *ngIf="invalidAddressLine2">Street Name or Locality is required</p>
             </div>
             <div class="form-group">
                 <div class="input-group">
@@ -33,8 +36,10 @@
                             <i class="fa fa-location-arrow"></i>
                         </span>                    
                     </div>
-                    <input type="text" class="form-control" name="addressLine3" id="addressLine3" placeholder="Town or Village Name" required="required">
+                    <input type="text" class="form-control" name="addressLine3" id="addressLine3" placeholder="Town or Village Name" required="required" [(ngModel)]="addressLine3">
                 </div>
+                <p class="alert alert-warning mt-2" *ngIf="invalidAddressLine3">Town or village name is rquired</p>
+
             </div>
             <div class="form-group">
                 <div class="input-group">
@@ -43,8 +48,10 @@
                             <i class="fa fa-globe"></i>
                         </span>                    
                     </div>
-                    <input type="text" class="form-control" name="addressLine4" id="addressLine4" placeholder="City and State Name" required="required">
+                    <input type="text" class="form-control" name="addressLine4" id="addressLine4" placeholder="City and State Name" required="required" [(ngModel)]="addressLine4">
                 </div>
+                <p class="alert alert-warning mt-2" *ngIf="invalidAddressLine4">City or state name is rquired</p>
+
             </div>
             <div class="form-group">
                 <div class="input-group">
@@ -54,8 +61,9 @@
                             <i class="fa fa-map-marker"></i>
                         </span>                    
                     </div>
-                    <input type="number" class="form-control" name="addressLine5" id="addressLine5" placeholder=Pincode required="required">
+                    <input type="number" class="form-control" name="addressLine5" id="addressLine5" placeholder=Pincode required="required" [(ngModel)]="addressLine5">
                 </div>
+                <p class="alert alert-warning mt-2" *ngIf="invalidAddressLine5">Pincode is rquired</p>
 
             </div>
 
