--- a/ICIN-frontend/src/app/registration/subComponents/contact-details/contact-details.component.html
+++ b/ICIN-frontend/src/app/registration/subComponents/contact-details/contact-details.component.html
@@ -1,6 +1,6 @@
 
 <div class="signup-form">
-    <form >
+    <form [formGroup]="contactForm"> 
 		<h2>Sign Up</h2>
 		<p>Please fill in this form to create an account!</p>
         <hr>
@@ -13,7 +13,12 @@
                 <i class="fa fa-paper-plane"></i>
             </span>                    
         </div>
-        <input type="email" class="form-control" name="email" placeholder="Email Address" required="required">
+        <input type="email" class="form-control" name="email" placeholder="Email Address" required="required" formControlName="email" [ngClass]="{ 'is-invalid':  f.email.errors }" >
+        <div *ngIf="f.email.errors" class="invalid-feedback">
+            <div *ngIf="f.email.errors.required">    <p class="alert alert-warning mt-2" >Email is required</p>  </div>
+            <div *ngIf="f.email.errors.email"> <p class="alert alert-warning mt-2" >Email must be a valid email address</div>
+        </div>
+
     </div>
 </div>
 <div class="form-group">
@@ -23,8 +28,16 @@
                 <i class="fa fa-mobile" ></i>
             </span>                    
         </div>
-        <input type="number" class="form-control" name="phone" placeholder="Mobile Number" required="required">
+        
+        <input type="text" formControlName="phone" class="form-control" [ngClass]="{ 'is-invalid': f.phone.errors }"  />
+                        <div *ngIf="f.phone.errors" class="invalid-feedback">
+                            <div *ngIf="f.phone.errors.required"><p class="alert alert-warning mt-2" >Mobile number is required </p></div>
+                            <div *ngIf="f.phone.errors.minlength"> <p class="alert alert-warning mt-2" > Mobile number must be of 10 characters </p></div>
+                            <div *ngIf="f.phone.errors.pattern"> <p class="alert alert-warning mt-2" > Only numbers are allowed</p></div>
+                        </div>
+        
     </div>
+
 </div>
   
 <div class="form-group">
