--- a/ICIN-frontend/src/app/registration/subComponents/user-registration/user-registration.component.html
+++ b/ICIN-frontend/src/app/registration/subComponents/user-registration/user-registration.component.html
@@ -11,8 +11,10 @@
                 <span class="fa fa-user"></span>
             </span>                    
         </div>
-        <input type="text" class="form-control" name="userName" id="userName" placeholder="User Name" required="required">
+        <input type="text" [(ngModel)]="userName" class="form-control" name="userName" id="userName" placeholder="User Name" required="required" >
     </div>
+    <p class="alert alert-warning mt-2" *ngIf="invalidUserName">User Name is required</p>
+
 </div>
 
 <div class="form-group">
@@ -22,8 +24,10 @@
                 <i class="fa fa-lock"></i>
             </span>                    
         </div>
-        <input type="text" class="form-control" name="password" placeholder="Password" required="required">
+        <input type="text" class="form-control" [(ngModel)]="password" name="password" placeholder="Password (min 8 characters)" required="required" >
     </div>
+    <p class="alert alert-warning mt-2" *ngIf="invalidPassword">Password is invalid</p>
+
 </div>
 <div class="form-group">
     <div class="input-group">
@@ -33,16 +37,21 @@
                 
             </span>                    
         </div>
-        <input type="text" class="form-control" name="confirm_password" placeholder="Confirm Password" required="required">
+        <input type="text" class="form-control" [(ngModel)]="confirmPassword" name="confirm_password" placeholder="Confirm Password" required="required" >
     </div>
+    <p class="alert alert-warning mt-2" *ngIf="invalidConfirmPassword">Confirm password is invalid</p>
+
 </div>
   
 <div class="form-group">
-    <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
+    <label class="form-check-label"><input type="checkbox" [(ngModel)]="checked" name="tnc" required="required" > I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
 </div>
+<p class="alert alert-warning mt-2" name="tnc" *ngIf="invalidTnc">Please accept terms and conditions</p>
+
 <div class="form-group">
-    <button type="submit" class="btn btn-primary btn-md">Sign Up</button>
+    <button type="button" class="btn btn-primary btn-md" (click)="validateUserDetails()">Sign Up</button>
 </div>
+
 
 </router-outlet>
 </form>
