--- a/ICIN-frontend/src/app/login/login.component.html
+++ b/ICIN-frontend/src/app/login/login.component.html
@@ -1,63 +1,40 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Login Page</title>
-   <!--Made with love by Mutiullah Samim -->
-   
-	<!--Bootsrap 4 CDN-->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    
-    <!--Fontawesome CDN-->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
-	<!--Custom styles-->
-</head>
-<body>
-<div class="container">
-	<div class="d-flex justify-content-center h-100">
-		<div class="card">
-			<div class="card-header">
-				<h3>Sign In</h3>
+<div class="signup-form">
+    <form [formGroup]="loginForm">
+		<h2>Login</h2>
+		<p>Login with your credentials to start exploring our digital services</p>
+        <hr>
+		<div class="form-group">
+			<div class="input-group">
+				<div class="input-group-prepend">
+					<span class="input-group-text">
+						<span class="fa fa-user"></span>
+					</span>                    
+				</div>
+				<input type="text" class="form-control" name="username" placeholder="Username" required="required" formControlName="username" [ngClass]="{ 'is-invalid':  f.username.errors }" >
+				<div *ngIf="f.username.errors" class="invalid-feedback">
+					<div *ngIf="f.username.errors.required">    <p class="alert alert-warning mt-2" >Username is required</p>  </div>
+			</div>
+			</div>
 			
-			</div>
-			<div class="card-body">
-				<form>
-					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-user"></i></span>
-						</div>
-						<input type="text" class="form-control" placeholder="username">
-						
-					</div>
-					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-key"></i></span>
-						</div>
-						<input type="password" class="form-control" placeholder="password">
-					</div>
-					<div class="row align-items-center remember">
-						<input type="checkbox">Remember Me
-					</div>
-					<div class="form-group">
-						<input type="submit" value="Login" class="btn float-right login_btn">
-					</div>
-				</form>
-			</div>
-			<div class="card-footer">
-				<div class="d-flex justify-content-center links">
-					Don't have an account?<a routerLink='/register'>Sign Up</a>
+        </div>
+        <div class="form-group">
+			<div class="input-group">
+				<div class="input-group-prepend">
+					<span class="input-group-text">
+						<i class="fa fa-lock"></i>
+					</span>                    
 				</div>
-				<div class="d-flex justify-content-center">
-					<a href="#">Forgot your password?</a>
-				</div>
+				<input type="password" class="form-control" name="passowrd" placeholder="Password" required="required" formControlName="password" [ngClass]="{ 'is-invalid':  f.password.errors }" >
+				<div *ngIf="f.password.errors" class="invalid-feedback">
+					<div *ngIf="f.password.errors.required">    <p class="alert alert-warning mt-2" >Password is required</p>  </div>
 			</div>
-		</div>
-	</div>
+			</div>
+        </div>
+        <div class="form-group">
+            <button type="button" class="btn btn-primary btn-lg float-center" (click)="validateLogin()">Login</button>
+        </div>
+     
+    </form>
 </div>
-</body>
-</html>
+	<div class="text-center ">New user? <a href="#" class="text-white" routerLink="/register">Register Now</a></div>
+
