--- a/ICIN-frontend/src/app/login/login.component.html
+++ b/ICIN-frontend/src/app/login/login.component.html
@@ -10,7 +10,7 @@
 						<span class="fa fa-user"></span>
 					</span>                    
 				</div>
-				<input type="text" class="form-control" name="username" placeholder="Username" required="required" formControlName="username" [ngClass]="{ 'is-invalid':  f.username.errors }" >
+				<input type="text" class="form-control" name="username" placeholder="Username" required="required" formControlName="username" [ngClass]="{ 'is-invalid': submitted &&  f.username.errors }" >
 				<div *ngIf="f.username.errors" class="invalid-feedback">
 					<div *ngIf="f.username.errors.required">    <p class="alert alert-warning mt-2" >Username is required</p>  </div>
 			</div>
@@ -24,7 +24,7 @@
 						<i class="fa fa-lock"></i>
 					</span>                    
 				</div>
-				<input type="password" class="form-control" name="passowrd" placeholder="Password" required="required" formControlName="password" [ngClass]="{ 'is-invalid':  f.password.errors }" >
+				<input type="password" class="form-control" name="passowrd" placeholder="Password" required="required" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" >
 				<div *ngIf="f.password.errors" class="invalid-feedback">
 					<div *ngIf="f.password.errors.required">    <p class="alert alert-warning mt-2" >Password is required</p>  </div>
 			</div>
