--- a/ICIN-frontend/src/app/homepage/homepage.component.html
+++ b/ICIN-frontend/src/app/homepage/homepage.component.html
@@ -1,5 +1,5 @@
 <!-- Page Content -->
-<div class="container">
+<!-- <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
         <h1 class="mt-5">ICIN Banking Application</h1>
@@ -14,7 +14,7 @@
       </div>
     </div>
   </div>
-  <!--<button class="btn btn-info btn-block my-4" type="submit">Sign in</button>-->
-  <!-- Bootstrap core JavaScript -->
+  button class="btn btn-info btn-block my-4" type="submit">Sign in</button>-->
+  <!-- Bootstrap core JavaScript 
   <script src="vendor/jquery/jquery.slim.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
