--- a/ICIN-frontend/src/app/navbar/navbar.component.html
+++ b/ICIN-frontend/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mr-auto text-white">
           <li class="nav-item  ml-2">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" routerLink="user/home">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
