--- a/ICIN-frontend/src/app/user-home/user-home.component.html
+++ b/ICIN-frontend/src/app/user-home/user-home.component.html
@@ -1,1 +1,99 @@
-<p>User home works!!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
+            <div class="account-container">
+                
+                        <div class="top-section">
+                            <div class="balance float-right">
+                                500$
+                            </div>
+                            <div class="account type">
+                                Primary
+                            </div>
+                        </div>
+                        <hr class="solid">
+                        <div class="bottom-section">
+                            <div class="details float-right">
+                                <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                            </div>
+                            <div>
+                                View Details
+                            </div>
+                        </div>
+                       
+                
+              </div>
+                <br>
+                <div class="account-container">
+                
+                    <div class="top-section">
+                        <div class="balance float-right">
+                            100$
+                        </div>
+                        <div class="account type">
+                            Saving Account
+                        </div>
+                    </div>
+                    <hr class="solid">
+                    <div class="bottom-section">
+                        <div class="details float-right">
+                            <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                        </div>
+                        <div>
+                            View Details
+                        </div>
+                    </div>
+                   
+            
+          </div>
+        </div>
+        <br>
+        <div class="col-sm">
+            <div class="row">
+                <div class="col-sm">
+                  <div class="transaction">
+                        <div class="top-section">
+                            <span class="float-right">Deposit</span>
+                            <i class="fa fa-credit-card" aria-hidden="true"></i>
+
+                        </div>
+                        <hr>
+                        <div class="bottom-section">
+                            <div class="details float-right">
+                                <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                            </div>
+                            <div>
+                                Go to deposits
+                            </div>
+                        </div>
+                </div>
+                </div>
+                <div class="col-sm">
+                    <div class="row">
+                        <div class="col-sm">
+                          <div class="transaction">
+                                <div class="top-section">
+                                    <span class="float-right">Withdrawal</span>
+                                    <i class="fa fa-money" aria-hidden="true"></i>
+
+        
+                                </div>
+                                <hr>
+                                <div class="bottom-section">
+                                    <div class="details float-right">
+                                        <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                                    </div>
+                                    <div>
+                                        Go to Withdrawal
+                                    </div>
+                                </div>
+                        </div>
+                        </div>
+                </div>
+        </div>
+             
+              
+                            
+        </div>
+    </div>
+</div>
