--- a/ICIN-frontend/src/app/user-home/user-home.component.css
+++ b/ICIN-frontend/src/app/user-home/user-home.component.css
@@ -5,7 +5,7 @@ body{
     margin-top:10%;
     color: orange;
     padding:0;
-    background: #77e4e6;
+    background: white;
 }
 .top-section{
     font-size: 2.5em;
