--- a/ICIN-frontend/src/styles.css
+++ b/ICIN-frontend/src/styles.css
@@ -2,4 +2,5 @@
 @import url("https://unpkg.com/bootstrap@4.1.0/dist/css/bootstrap.min.css");
 html,body{
     height:100%;
+    overflow: hidden;
 }
