--- a/ICIN-frontend/src/app/navbar/navbar.component.html
+++ b/ICIN-frontend/src/app/navbar/navbar.component.html
@@ -11,12 +11,12 @@
      
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mr-auto text-white">
-          <li class="nav-item  ml-2">
+          <li class="nav-item  ml-2" *ngIf="service.isUserLogin()">
             <a class="nav-link" routerLink="user/home">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" *ngIf="service.isUserLogin()">
           <a class="nav-link dropdown-toggle ml-2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Accounts
           </a>
@@ -25,7 +25,7 @@
             <a class="dropdown-item" href="#">Saving</a>
           </div>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" *ngIf="service.isUserLogin()">
           <a class="nav-link dropdown-toggle ml-2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Transfer
           </a>
@@ -34,7 +34,7 @@
             <a class="dropdown-item" (click)="handleTransferFundRequest('Saving Account')">From Saving Account</a>
           </div>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" *ngIf="service.isUserLogin()">
           <a class="nav-link dropdown-toggle ml-2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Request
           </a>
@@ -45,11 +45,20 @@
         </li>
       </ul>
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
+          <li class="nav-item" *ngIf="!service.isUserLogin()">
             <a class="nav-link" routerLink="/login" (click)="isView()">Login</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" *ngIf="!service.isUserLogin()">
             <a class="nav-link" routerLink="/register" (click)="isView()">Sign Up</a>
+          </li>
+          <li class="nav-item dropdown" *ngIf="service.isUserLogin()">
+            <a class="nav-link dropdown-toggle ml-2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              {{service.getUserName()}}
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" >View Profile</a>
+              <a class="dropdown-item" (click)="handleLogout()">Logout</a>
+            </div>
           </li>
         </ul>
       </div>
