Fixed profile page to read dynamic data

--- a/ICIN-frontend/src/app/user-profile/user-profile.component.html
+++ b/ICIN-frontend/src/app/user-profile/user-profile.component.html
@@ -6,13 +6,13 @@
             <div class="card-header">
                 <img src="https://image.flaticon.com/icons/svg/151/151782.svg"  class="profile-pic" alt="User photo">
                 <br>
-                <span class="user">{{userName}}</span>
+                <span class="user">{{userName}}'s profile</span>
             </div>
             <div class="card-body">
-              <p class="card-text">First Name: </p>
-              <p class="card-text">Last Name:  </p>
-              <p class="card-text">Mobile Number: </p>
-              <p class="card-text">Email id: </p>
+              <p class="card-text">First Name: {{firstname}} </p>
+              <p class="card-text">Last Name:  {{lastname}} </p>
+              <p class="card-text">Mobile Number: {{phonenumber}}</p>
+              <p class="card-text">Email id: {{email}}</p>
             </div>
           </div>
     </div>
