Added depsoit fund

--- a/ICIN-frontend/src/app/user-home/user-home.component.html
+++ b/ICIN-frontend/src/app/user-home/user-home.component.html
@@ -60,7 +60,7 @@
                         <hr>
                         <div class="bottom-section">
                             <div class="details float-right">
-                                <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                                <i class="fa fa-arrow-right" aria-hidden="true" (click)="handleDeposit('Primary')"></i>
                             </div>
                             <div>
                                 Go to deposits
