--- a/ICIN-frontend/src/app/navbar/navbar.component.html
+++ b/ICIN-frontend/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" (click)="handleHome()">
         <i class="fa fa-university" aria-hidden="true"></i>
         ICIN
       </a>
