--- a/ICIN-frontend/src/app/navbar/navbar.component.html
+++ b/ICIN-frontend/src/app/navbar/navbar.component.html
@@ -21,8 +21,8 @@
             Accounts
           </a>
           <div class="dropdown-menu bg-light " aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Primary</a>
-            <a class="dropdown-item" href="#">Saving</a>
+            <a class="dropdown-item" (click)="handleAccount('Primary')">Primary</a>
+            <a class="dropdown-item" (click)="handleAccount('Saving')">Saving</a>
           </div>
         </li>
         <li class="nav-item dropdown" *ngIf="service.isUserLogin()">
