--- a/ICIN-frontend/src/app/registration/subComponents/user-registration/user-registration.component.html
+++ b/ICIN-frontend/src/app/registration/subComponents/user-registration/user-registration.component.html
@@ -26,7 +26,9 @@
         </div>
         <input type="password" class="form-control" [(ngModel)]="password" name="password" placeholder="Password (min 8 characters)" required="required" >
     </div>
-    <p class="alert alert-warning mt-2" *ngIf="invalidPassword">Password is invalid</p>
+    <p class="alert alert-warning mt-2" *ngIf="invalidPassword">Password is invalid 
+        It must be minimum 8 digits and should contain alteast one letter,number or special symbol
+    </p>
 
 </div>
 <div class="form-group">
