--- a/ICIN-frontend/src/app/registration/subComponents/user-registration/user-registration.component.html
+++ b/ICIN-frontend/src/app/registration/subComponents/user-registration/user-registration.component.html
@@ -51,7 +51,7 @@
 <p class="alert alert-warning mt-2" name="tnc" *ngIf="invalidTnc">Please accept terms and conditions</p>
 
 <div class="form-group">
-    <button type="button" class="btn btn-primary btn-md" (click)="validateUserDetails()">Sign Up</button>
+    <button type="button" id="signUpButton" class="btn btn-primary btn-md" (click)="validateUserDetails()">Sign Up</button>
 </div>
 
 
