--- a/ICIN-frontend/src/app/login/login.component.html
+++ b/ICIN-frontend/src/app/login/login.component.html
@@ -25,14 +25,14 @@
 						<i class="fa fa-lock"></i>
 					</span>                    
 				</div>
-				<input type="password" class="form-control" name="passowrd" placeholder="Password" required="required" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" >
+				<input type="password" class="form-control" name="password" placeholder="Password" required="required" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" >
 				<div *ngIf="f.password.errors" class="invalid-feedback">
 					<div *ngIf="f.password.errors.required">    <p class="alert alert-warning mt-2" >Password is required</p>  </div>
 			</div>
 			</div>
         </div>
         <div class="form-group">
-            <button type="button" class="btn btn-primary btn-lg float-center" (click)="validateLogin()">Login</button>
+            <button type="button" id="loginButton" class="btn btn-primary btn-lg float-center" (click)="validateLogin()">Login</button>
         </div>
      
     </form>
