--- a/ICIN-frontend/src/app/user-profile/user-profile.component.html
+++ b/ICIN-frontend/src/app/user-profile/user-profile.component.html
@@ -13,6 +13,7 @@
               <p class="card-text">Last Name:  {{lastname}} </p>
               <p class="card-text">Mobile Number: {{phonenumber}}</p>
               <p class="card-text">Email id: {{email}}</p>
+              <p class="card-text">Address : {{address}}</p>
             </div>
           </div>
     </div>
@@ -26,7 +27,6 @@
                     <div class="card-body">
                       <p class="card-text">Account Number: {{primaryAccountNumber}}</p>
                       <p class="card-text">Account Balance: {{primaryAccountBalance}} Rs</p>
-                      <a href="#" class="btn btn-primary">View more</a>
                     </div>
                   </div>
             </div>
@@ -38,7 +38,6 @@
                 <div class="card-body">
                   <p class="card-text">Account Number: {{savingAccountNumber}}</p>
                   <p class="card-text">Account Balance: {{savingAccountBalance}} Rs</p>
-                  <a href="#" class="btn btn-primary">View more</a>
                 </div>
               </div>
         </div>
