Added Automation Testing

--- a/ICIN-frontend/src/app/deposit-funds/deposit-funds.component.html
+++ b/ICIN-frontend/src/app/deposit-funds/deposit-funds.component.html
@@ -22,7 +22,7 @@
         </div>
       </div>
     
-    <button type="button" class="btn btn-primary" (click)="handleTransferFund()">Deposit Money</button>
+    <button type="button" class="btn btn-primary" (click)="handleTransferFund()" id="depositMoneyButton">Deposit Money</button>
   </form>
 </div>
 
