--- a/ICIN-frontend/src/app/primary-account/primary-account.component.html
+++ b/ICIN-frontend/src/app/primary-account/primary-account.component.html
@@ -11,7 +11,7 @@
             <th scope="col">Transaction Id</th>
             <th scope="col">Description</th>
             <th scope="col">Benificiary's Account Number</th>
-            <th scope="col">Amount</th>
+            <th scope="col">Amount Transferred</th>
           </tr>
         </thead>
         <tbody>
@@ -19,7 +19,7 @@
             <th scope="row">{{transaction["transactionId"]}}</th>
             <td>{{transaction["description"]}}</td>
             <td>{{transaction["destinationAccountnumber"]}}</td>
-            <td>{{transaction["transactionAmount"]}}</td>
+            <td>{{transaction["transactionAmount"]}} Rs</td>
           </tr>
           
         </tbody>
