--- a/ICIN-frontend/src/app/user-home/user-home.component.html
+++ b/ICIN-frontend/src/app/user-home/user-home.component.html
@@ -12,7 +12,7 @@
                             </div>
                         </div>
                         <hr class="solid">
-                        <div class="bottom-section">
+                        <div class="bottom-section" id="viewPrimaryAccountDetails" (click)="handlePrimaryAccount()">
                             <div class="details float-right">
                                 <i class="fa fa-arrow-right" aria-hidden="true"></i>
                             </div>
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <hr class="solid">
-                    <div class="bottom-section" >
+                    <div class="bottom-section" id="viewSavingAccountDetails" (click)="handleSavingAccount()" >
                         <div class="details float-right">
                             <i class="fa fa-arrow-right" aria-hidden="true"></i>
                         </div>
@@ -58,7 +58,7 @@
 
                         </div>
                         <hr>
-                        <div class="bottom-section" (click)="handleDeposit('Primary Account')">
+                        <div class="bottom-section" (click)="handleDeposit('Primary Account')" id="depositFundSection">
                             <div class="details float-right">
                                 <i class="fa fa-arrow-right" aria-hidden="true" ></i>
                             </div>
@@ -79,7 +79,7 @@
         
                                 </div>
                                 <hr>
-                                <div class="bottom-section"(click)="handleWithdraw('Primary Account')">
+                                <div class="bottom-section"(click)="handleWithdraw('Primary Account')" id="withdrawFudSection" >
                                     <div class="details float-right">
                                         <i class="fa fa-arrow-right" aria-hidden="true" ></i>
                                     </div>
