Admin intergration added

--- a/Admin_Portal-master/AdminPortal/src/app/primary-transaction/primary-transaction.component.html
+++ b/Admin_Portal-master/AdminPortal/src/app/primary-transaction/primary-transaction.component.html
@@ -3,22 +3,20 @@
 <table class="table table-striped">
 	<thead>
 		<tr>
-			<th>Post Date</th>
-                <th>Description</th>
+				<th>Transaction Id</th>
+				<th>Account no</th>
+			    <th>Post Date</th>
                 <th>Type</th>
-                <th>Status</th>
-                <th>Amount</th>
                 <th>Available Balance</th>
 		</tr>
 	</thead>
 	<tbody>
 		<tr *ngFor="let primaryTransaction of primaryTransactionList">
+			<td>{{primaryTransaction.transactionId}}</td>
+			<td>{{primaryTransaction.accNo}}</td>
 			<td>{{primaryTransaction.date | date: 'MM/dd/yyyy'}} </td>
-			<td>{{primaryTransaction.description}}</td>
-			<td>{{primaryTransaction.type}}</td>
-			<td>{{primaryTransaction.status}}</td>
-			<td>{{primaryTransaction.amount}}</td>
-			<td>{{primaryTransaction.availableBalance}}</td>
+			<td>{{primaryTransaction.transactionType}}</td>
+			<td>{{primaryTransaction.newBalance}}</td>
 		</tr>
 	</tbody>
 </table>   
