--- a/Admin_Portal-master/AdminPortal/src/app/savings-transaction/savings-transaction.component.html
+++ b/Admin_Portal-master/AdminPortal/src/app/savings-transaction/savings-transaction.component.html
@@ -3,22 +3,20 @@
 <table class="table table-striped">
 	<thead>
 		<tr>
-			<th>Post Date</th>
-                <th>Description</th>
+			    <th>Transaction Id</th>
+				<th>Account no</th>
+			    <th>Post Date</th>
                 <th>Type</th>
-                <th>Status</th>
-                <th>Amount</th>
                 <th>Available Balance</th>
 		</tr>
 	</thead>
 	<tbody>
 		<tr *ngFor="let savingsTransaction of savingsTransactionList">
-			<td>{{savingsTransaction.date | date: 'MM/dd/yyyy'}} </td>
-			<td>{{savingsTransaction.description}}</td>
-			<td>{{savingsTransaction.type}}</td>
-			<td>{{savingsTransaction.status}}</td>
-			<td>{{savingsTransaction.amount}}</td>
-			<td>{{savingsTransaction.availableBalance}}</td>
+			<td>{{{savingsTransaction.transactionId}}</td>
+			<td>{{{savingsTransaction.accNo}}</td>
+			<td>{{{savingsTransaction.date | date: 'MM/dd/yyyy'}} </td>
+			<td>{{{savingsTransaction.transactionType}}</td>
+			<td>{{{savingsTransaction.newBalance}}</td>
 		</tr>
 	</tbody>
 </table>   
