--- a/Admin_Portal-master/AdminPortal/src/app/user-account/user-account.component.html
+++ b/Admin_Portal-master/AdminPortal/src/app/user-account/user-account.component.html
@@ -4,29 +4,26 @@
 <table id="userTable" class="table table-striped" cellspacing="0" width="100%" >
 	<thead>
 		<tr>
-			<th>User Name</th>
 			<th>First Name</th>
 			<th>Last Name</th>
 			<th>Email</th>
 			<th>Phone</th>
 			<th>Primary Account</th>
 			<th>Savings Account</th>
-			<th>Enabled</th>
+			<th>User Status</th>
 			<th>Action</th>
 		</tr>
 	</thead>
 	<tbody>
 		<tr *ngFor="let user of userList">
-			<td>{{user.username}}</td>
-			<td>{{user.firstName}}</td>
+			<td>{{user.fullName}}</td>
 			<td>{{user.lastName}}</td>
-			<td>{{user.email}}</td>
-			<td>{{user.phone}}</td>
-			<td><a (click)="onSelectPrimary(user.username)" style="cursor: pointer;">{{user.primaryAccount.accountBalance}}</a></td>
-			<td><a (click)="onSelectSavings(user.username)" style="cursor: pointer;">{{user.savingsAccount.accountBalance}}</a></td>
-			<td>{{user.enabled}}</td>
-			<td [hidden]="user.enabled"><a (click)="enableUser(user.username)" style="cursor: pointer;">Enable</a></td>
-			<td [hidden]="!user.enabled"><a (click)="disableUser(user.username)" style="cursor: pointer;">Disable</a></td>
+			<td>{{user.mailid}}</td>
+			<td>{{user.phonenumber}}</td>
+			<td><a (click)="onSelectPrimary(user.primaryAccount.accountNumber)" style="cursor: pointer;">{{user.primaryAccount.accountNumber}}</a></td>
+			<td><a (click)="onSelectSavings(user.savingsAccount.accountNumber)" style="cursor: pointer;">{{user.savingsAccount.accountNumber}}</a></td>
+			<td [hidden]="user.enabled"><a (click)="enableUser(user.emailId)" style="cursor: pointer;">Enable</a></td>
+			<td [hidden]="!user.enabled"><a (click)="disableUser(user.emailId)" style="cursor: pointer;">Disable</a></td>
 		</tr>
 	</tbody>
 </table>   
